<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">StartProject</string>
    <string name="START">Start</string>
    <string name="SURVIVOR">SURVIVOR</string>
    <string name="STR">START</string>
    <string name="PREFERENCES">PREFERENCES</string>
    <string name="ABOUT">ABOUT</string>
    <string name="MAP">MAP</string>
    <string name="EXIT">EXIT</string>
    <string name="LOST">LOST</string>
    <string name="VERSION">Version: 1.0</string>
    <string name="NEW_GAME">New Game</string>
    <string name="CONTINUE">Continue</string>
    <string name="MENU">Menu</string>
    <string name="PLAYER_NAME">Enter name:</string>
    <string name="PERCENT">%</string>
    <string name="CHAPTER_1">Chapter 1.</string>
    <string name="ACQUAINTANCE">Hause Of Wood</string>
    <string name="Hause_of_Wood_01"> Однажды я осознал, что мне ничего не снится.</string>
    
    <string name="Hause_of_Wood_02"> Никогда…</string>
    
      <string name="Hause_of_Wood_03">  Сны для тех, кто слишком счастлив, либо слишком печален. От состояния души и рождаются сны.
           Ты видишь их, как собственное угрюмое отражение в плотно сшитом полотне зеркала.</string>
           <string name="Hause_of_Wood_031">Как правило – твое лицо будет искажаться, глаза вылезут с орбит, щеки свиснут, как старые сморщенные блины, нос разбухнет, он всегда разбухает… </string>
           
        <string name="Hause_of_Wood_04">  – Паша иди кушать, просыпайся наконец! </string>
        
            <string name="Hause_of_Wood_05">   Я отпрянул от мыслей и быстро соскочил с кровати. Сонно потер глаза. 
                За окном было слишком ярко, чтобы туда смотреть, потому я отвернулся, прищурив глаза, и спустился вниз, в кухню.</string>
                
                <string name="Hause_of_Wood_06">  Моя мать всегда встает пораньше, чтобы приготовить что-то поесть. Обычно она готовит для Жасмин.</string>
                
                    <string name="Hause_of_Wood_07">  – Зачем же орать так… - глухо сказал я, открывая холодильник.</string>
                    
                        <string name="Hause_of_Wood_08"> – Ты всегда встаешь позже всех. – отозвалась Жасмин.</string>
                        
                            <string name="Hause_of_Wood_09">  – Вот именно! Пора уже бросить эти ночные посиделки… 
                                Эти мониторы все глаза выжгут, и спать нормально не дадут! – В тесноте кухни мать вертелась, как хомячок в колесе. – Ну вот! Я опять опаздываю на работу. 
                                Никогда не выйдет выйти пораньше… </string>
                                
                                <string name="Hause_of_Wood_10">  – Я не поздно встаю, ведь никогда не опаздываю, в отличии от вас обоих. </string>
                                
                                    <string name="Hause_of_Wood_11"> В холодильнике ничего нормального не было, нормального под сегодняшнее утро.
                                        Я снова протер глаза, словно надеясь, что после этого там что-то появится съестное. Но – увы!</string>
                                        
                                        <string name="Hause_of_Wood_12">– Я уже иду! Паша, заберешь Жасмин со школы, я сегодня буду поздно… скорее всего.</string>
                                        
                                            <string name="Hause_of_Wood_13">Я кивнул головой. Несмотря на то, что Жасмин была моей сестрой и это должно быть очевидностью – но она мне очень нравилась.
                                                Это была милая 9-ти летняя девочка с пышными рыжими волосами и острым орлиным носиком.
                                                У нее были весенние яркие глаза зеленоватых оттенков и небольшой пухлый животик - она очень любила кушать.</string>
                                                
                                                <string name="Hause_of_Wood_14">– Паша!!! – вдруг резко вскрикнула мама и уставилась на сына. – Я когда просила тебя отремонтировать этот… – Она явно хотела сказать что-то неприличное, но вовремя сдержалась и более ровным тоном продолжила. – этот кусок… или как он правильно называется? 
                                                    Без разницы! Мне надоело каждый раз выходя из дома рвать свои наряды. 
                                                    Сейчас же возьми и-с-с-с… сделай что-то наконец!</string>
                                                    
      <string name="Hause_of_Wood_15"> Паша смотрел ей вслед без малейшего сожаления о том, что он не отремонтировал этот поломанный фрагмент вагонки, 
          хоть и прошло уже месяц, если не больше, с момента, как мама порвала свои первые джинсы о его острые углы.</string>
          
      <string name="Hause_of_Wood_16">Он подошел к увеченной стене. 
          Кусок тонкого дерева толщиной в человеческую ладонь спокойно торчал из стены, будто так и было задумано.</string>
          
      <string name="Hause_of_Wood_17">Паша всегда его вставлял назад и говорил себе, что сейчас или через полчаса он обязательно это отремонтирует.</string>
      
      <string name="Hause_of_Wood_18">В общем сложностей в этом вовсе не было, учитывая то, что фрагмент был боковым и в кладовой все еще оставались полосы этого стройматериала.</string>
      
      <string name="Hause_of_Wood_19">Но всегда что-то сбивало его с этой мысли или же он попросту забывал об этом. 
          А его мать всегда в спешке что-то в себе дырявила об острый угол дерева так, как он постоянно выпадал обратно.</string>
          
      <string name="Hause_of_Wood_20">Сейчас у Паши не было никакого желания возится с этим делом, и он только скучно смотрел сквозь стену и думал.</string>


    
</resources>