<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" 
    android:background="@drawable/background_main" >

    <Button
        android:id="@+id/contin"
        android:layout_width="200dp"
        android:layout_height="55dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/new_game"
        android:text="@string/CONTINUE" />

    <Button
        android:id="@+id/menu"
        android:layout_width="200dp"
        android:layout_height="55dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/contin"
        android:text="@string/MENU" />

    <Button
        android:id="@+id/new_game"
        android:layout_width="200dp"
        android:layout_height="55dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="131dp"
        android:text="@string/NEW_GAME" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="51dp"
        android:text="@string/SURVIVOR"
        android:textSize="50sp"
        android:textStyle="italic|bold" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="14dp"
        android:layout_marginLeft="18dp"
        android:text="@string/VERSION" />

</RelativeLayout>